# conductor

./: .gitignore  README.md  pyproject.toml
conductor/: __init__.py  brief.py  core.py  local.py  optimizer.py  router.py
tests/: test_brief.py  test_core.py  test_router.py
