[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-ai"
version = "0.1.0"
description = "Tiered AI orchestration for the Anthropic API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/w1123581321345589/conductor"

[tool.setuptools.packages.find]
include = ["conductor*"]

[tool.ruff]
line-length = 92
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
